fixed spacing for spot description

--- a/frontend/src/components/Spots/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails.css
@@ -48,6 +48,7 @@
     flex-direction: column;
     justify-content: center;
     width: 500px;
+    padding: 10px;
 }
 
 .details-text:hover {
